--- a/views/home.ejs
+++ b/views/home.ejs
@@ -107,7 +107,8 @@
                             <a href="/admin/dashboard" class="btn btn-primary mb-1 btn-sm-block">Go To Dashboard</a>
                             <% }%>
                             <% if(currentUser.role=="r"){ %>
-                            <a href="/receptionist/dashboard" class="btn btn-primary mb-1 btn-sm-block">Go To Dashboard</a>
+                            <a href="/receptionist/dashboard" class="btn btn-primary mb-1 btn-sm-block">Go To
+                                Dashboard</a>
 
                             <% }%>
                             <% }else{%>
