--- a/views/admin/customer/edit.ejs
+++ b/views/admin/customer/edit.ejs
@@ -34,92 +34,95 @@
                                 <h4 class="card-title">Create New Customers</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/admin/customer/<%= customer._id %>?_method=PUT" method="post"  novalidate class="validated-form">
+                                <form action="/admin/customer/<%= customer._id %>?_method=PUT" method="post" novalidate
+                                    class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
                                                 <input type="text" class="form-control" id="fname"
-                                                    value="<%=customer.fname%>" name="customer[fname]"
-                                                    required placeholder="First Name" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.fname%>" name="customer[fname]" required
+                                                    placeholder="First Name" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="lname">Last Name</label>
                                                 <input type="text" class="form-control" id="lname"
-                                                    value="<%=customer.lname%>" name="customer[lname]"
-                                                    required placeholder="Last Name" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.lname%>" name="customer[lname]" required
+                                                    placeholder="Last Name" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
                                                 <input type="text" class="form-control" id="email"
-                                                    value="<%=customer.email%>" name="customer[email]"
-                                                    required placeholder="Enter email" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.email%>" name="customer[email]" required
+                                                    placeholder="Enter email" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="mobile">Mobile</label>
                                                 <input type="text" class="form-control" id="mobile"
-                                                    value="<%=customer.mobile%>" name="customer[mobile]"
-                                                    required placeholder="Enter Mobile" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.mobile%>" name="customer[mobile]" required
+                                                    placeholder="Enter Mobile" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="nic">NIC</label>
                                                 <input type="text" class="form-control" id="nic"
-                                                    value="<%=customer.nic%>" name="customer[nic]" required placeholder="NIC" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.nic%>" name="customer[nic]" required
+                                                    placeholder="NIC" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="dob">DOB</label>
                                                 <input type="date" class="form-control" id="dob"
-                                                value="<%= new Date(customer.dob).toLocaleString("sv-SE", { year: "numeric", month: "2-digit", day: "2-digit"}).replace(" ", "T") %>" name="customer[dob]" required placeholder="dob" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%= new Date(customer.dob).toLocaleString("sv-SE", { year: "numeric", month: "2-digit", day: "2-digit"}).replace(" ", "T") %>"
+                                                    name="customer[dob]" required placeholder="dob" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="address">Address</label>
                                                 <input type="text" class="form-control" id="address"
-                                                    value="<%=customer.address%>" name="customer[address]"
-                                                    required placeholder="Address" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.address%>" name="customer[address]" required
+                                                    placeholder="Address" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="city">City</label>
                                                 <input type="text" class="form-control" id="city"
-                                                    value="<%=customer.city%>" name="customer[city]"
-                                                    required placeholder="City" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.city%>" name="customer[city]" required
+                                                    placeholder="City" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -127,12 +130,14 @@
                                                 <label for="state">State</label>
                                                 <select class="form-control" id="state" required name="customer[state]">
                                                     <% for(let state of data['states']){ %>
-                                                    <option value="<%= state._id %>" <%= (customer.state.equals(state._id))?"selected" :""%>><%= state.name %> </option>
+                                                    <option value="<%= state._id %>"
+                                                        <%= (customer.state.equals(state._id))?"selected" :""%>>
+                                                        <%= state.name %> </option>
                                                     <%  } %>
                                                 </select>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -141,12 +146,14 @@
                                                 <select class="form-control" id="country" required
                                                     name="customer[country]">
                                                     <% for(let country of data['countries']){ %>
-                                                    <option value="<%= country._id %>" <%= (customer.country.equals(country._id))? "selected" :""%> ><%= country.name %> </option>
+                                                    <option value="<%= country._id %>"
+                                                        <%= (customer.country.equals(country._id))? "selected" :""%>>
+                                                        <%= country.name %> </option>
                                                     <%  } %>
                                                 </select>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
