--- a/views/admin/facility/edit.ejs
+++ b/views/admin/facility/edit.ejs
@@ -34,17 +34,18 @@
                                 <h4 class="card-title">Create New Facility</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/admin/facility/<%= facility._id %>?_method=PUT" method="post"  novalidate class="validated-form">
+                                <form action="/admin/facility/<%= facility._id %>?_method=PUT" method="post" novalidate
+                                    class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Name</label>
                                                 <input type="text" class="form-control" id="name"
-                                                    value="<%= facility.name  %> " name="facility[name]"
-                                                    required placeholder="Name" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%= facility.name  %> " name="facility[name]" required
+                                                    placeholder="Name" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -53,9 +54,9 @@
                                                 <input type="text" class="form-control" id="duration"
                                                     value="<%= facility.duration  %> " name="facility[duration]"
                                                     required placeholder="Duration" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -64,20 +65,20 @@
                                                 <input type="text" class="form-control" id="headcount"
                                                     value="<%= facility.headcount  %> " name="facility[headcount]"
                                                     required placeholder="Head Count" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="price">Price</label>
                                                 <input type="text" class="form-control" id="price"
-                                                    value="<%= facility.price  %> " name="facility[price]"
-                                                    required placeholder="Head Count" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%= facility.price  %> " name="facility[price]" required
+                                                    placeholder="Head Count" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
