--- a/views/admin/room/create.ejs
+++ b/views/admin/room/create.ejs
@@ -34,36 +34,36 @@
                                 <h4 class="card-title">Create New Room</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/admin/room/" method="post" novalidate class="validated-form"  >
+                                <form action="/admin/room/" method="post" novalidate class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="number">Room Number</label>
                                                 <input type="text" class="form-control" id="number" name="room[number]"
-                                                   required placeholder="Room Number" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    required placeholder="Room Number" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="charge">Room Charge</label>
                                                 <input type="text" class="form-control" id="charge" name="room[charge]"
-                                                   required placeholder="Room Charge" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    required placeholder="Room Charge" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="headcount">Head Count</label>
-                                                <input type="text" class="form-control" id="headcount" name="room[headcount]"
-                                                   required placeholder="Head Count" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="text" class="form-control" id="headcount"
+                                                    name="room[headcount]" required placeholder="Head Count" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <!-- <div class="col-xl-4 col-md-6 col-12 mb-1">
