--- a/views/admin/room/edit.ejs
+++ b/views/admin/room/edit.ejs
@@ -34,39 +34,40 @@
                                 <h4 class="card-title">Create New Room</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/admin/room/<%= room._id %>?_method=PUT" method="post"  novalidate class="validated-form">
+                                <form action="/admin/room/<%= room._id %>?_method=PUT" method="post" novalidate
+                                    class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Room Number</label>
                                                 <input type="text" class="form-control" id="name"
-                                                    value="<%=room.number%>" name="room[number]"
-                                                    required placeholder="Room Number" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=room.number%>" name="room[number]" required
+                                                    placeholder="Room Number" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Room Charge</label>
                                                 <input type="text" class="form-control" id="name"
-                                                    value="<%=room.charge%>" name="room[charge]"
-                                                    required placeholder="Room Charge" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=room.charge%>" name="room[charge]" required
+                                                    placeholder="Room Charge" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Head Count</label>
                                                 <input type="text" class="form-control" id="name"
-                                                    value="<%=room.headcount%>" name="room[headcount]"
-                                                    required placeholder="Head Count" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=room.headcount%>" name="room[headcount]" required
+                                                    placeholder="Head Count" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
