--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,7 +8,7 @@
 
              <li class="nav-item d-none d-lg-block"><a class="nav-link nav-link-style"><i class="ficon"
                          data-feather="moon"></i></a></li>
-      
+
              <% if(currentUser){ %>
              <li class="nav-item dropdown dropdown-user"><a class="nav-link dropdown-toggle dropdown-user-link"
                      id="dropdown-user" href="javascript:void(0);" data-toggle="dropdown" aria-haspopup="true"
@@ -27,22 +27,20 @@
                  </div>
              </li>
              <% }else{%>
-                <li class="nav-item"><a class="nav-link dropdown-user-link"
-                    id="dropdown-user" href="/login" aria-expanded="false">
-                    <div class="user-nav d-sm-flex d-none"><span
-                            class="user-name font-weight-bolder">Login
-                        </span><span
-                            class="user-status"></span>
-                    </div><span class="avatar"><img class="round"
-                            src="/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40"
-                            width="40"><span class="avatar-status-online"></span></span>
-                </a>
-            </li>
-            <% } %>
+             <li class="nav-item"><a class="nav-link dropdown-user-link" id="dropdown-user" href="/login"
+                     aria-expanded="false">
+                     <div class="user-nav d-sm-flex d-none"><span class="user-name font-weight-bolder">Login
+                         </span><span class="user-status"></span>
+                     </div><span class="avatar"><img class="round"
+                             src="/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40"
+                             width="40"><span class="avatar-status-online"></span></span>
+                 </a>
+             </li>
+             <% } %>
          </ul>
      </div>
  </nav>
- 
+
  <ul class="main-search-list-defaultlist-other-list d-none">
      <li class="auto-suggestion justify-content-between"><a
              class="d-flex align-items-center justify-content-between w-100 py-50">
