--- a/views/receptionist/booking/create.ejs
+++ b/views/receptionist/booking/create.ejs
@@ -34,12 +34,14 @@
                                 <h4 class="card-title">Add New Booking</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/receptionist/booking/" method="post" class="create-booking validated-form" novalidate >
+                                <form action="/receptionist/booking/" method="post"
+                                    class="create-booking validated-form" novalidate>
                                     <div class="row">
                                         <div class="col-xl-6 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="customer">Customer</label>
-                                                <select required class="form-control" id="customer" name="booking[customer]">
+                                                <select required class="form-control" id="customer"
+                                                    name="booking[customer]">
                                                     <% for(let customer of data['customers']){ %>
                                                     <option value="<%= customer._id %>"><%= customer.fname %> </option>
                                                     <%  } %>
@@ -52,7 +54,7 @@
                                         <div class="col-xl-6 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="room">Room</label>
-                                                <select  required class="form-control" id="room" name="booking[room]">
+                                                <select required class="form-control" id="room" name="booking[room]">
                                                     <% for(let room of data['rooms']){ %>
                                                     <option value="<%= room._id %>"><%= room.number %> </option>
                                                     <%  } %>
@@ -67,9 +69,9 @@
                                                 <label for="check_in">Check In time</label>
                                                 <input type="datetime-local" class="form-control" id="check_in" required
                                                     name="booking[check_in]" required placeholder="Enter email" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-6 col-md-6 col-12 mb-1">
@@ -77,9 +79,9 @@
                                                 <label for="checkout">Checkout</label>
                                                 <input type="datetime-local" class="form-control" id="checkout" required
                                                     name="booking[checkout]" required placeholder="Enter Mobile" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-6 col-md-6 col-12 mb-1">
@@ -88,9 +90,11 @@
                                                 <% for(let package of data["packages"]){ %>
                                                 <div class="custom-control custom-radio">
                                                     <input type="radio" class="custom-control-input  customer-package"
-                                                        name="booking[package]" data-price="<%= package.amount %>" value="<%= package._id %>" id="<%= package._id %>" />
+                                                        name="booking[package]" data-price="<%= package.amount %>"
+                                                        value="<%= package._id %>" id="<%= package._id %>" />
                                                     <label class="custom-control-label"
-                                                        for="<%= package._id %>"><%= package.name %> - <%= package.amount %></label>
+                                                        for="<%= package._id %>"><%= package.name %> -
+                                                        <%= package.amount %></label>
                                                 </div>
                                                 <%  } %>
                                             </div>
@@ -98,15 +102,19 @@
                                         <div class="col-xl-6 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <!-- <div class="col-md-12"> -->
-                                                    <label for="ammenities">Ammenities</label>
-                                                    <!-- </div> -->
-                                                    <div class=" mx-1 row">
+                                                <label for="ammenities">Ammenities</label>
+                                                <!-- </div> -->
+                                                <div class=" mx-1 row">
                                                     <% for(let ammenities of data['ammenities']){ %>
                                                     <div class="col-md-6 custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input customer-amminities"
-                                                            name="booking[ammenities][]" data-price="<%= ammenities.price_per_unit %>"  value="<%= ammenities._id %>" id="<%= ammenities._id %>" />
+                                                        <input type="checkbox"
+                                                            class="custom-control-input customer-amminities"
+                                                            name="booking[ammenities][]"
+                                                            data-price="<%= ammenities.price_per_unit %>"
+                                                            value="<%= ammenities._id %>" id="<%= ammenities._id %>" />
                                                         <label class="custom-control-label"
-                                                            for="<%= ammenities._id %>"><%= ammenities.name %> - <%= ammenities.price_per_unit %></label>
+                                                            for="<%= ammenities._id %>"><%= ammenities.name %> -
+                                                            <%= ammenities.price_per_unit %></label>
                                                     </div>
                                                     <%  } %>
                                                 </div>
@@ -120,7 +128,8 @@
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
                                             <div class="form-group">
-                                                <button class="btn btn-primary" type="submit">Submit for Payment</button>
+                                                <button class="btn btn-primary" type="submit">Submit for
+                                                    Payment</button>
                                             </div>
                                         </div>
                                     </div>
