--- a/views/receptionist/booking/reciept.ejs
+++ b/views/receptionist/booking/reciept.ejs
@@ -6,13 +6,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0,minimal-ui">
-    <meta name="description" content="Vuexy admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
-    <meta name="keywords" content="admin template, Vuexy admin template, dashboard template, flat admin template, responsive admin template, web app">
+    <meta name="description"
+        content="Vuexy admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
+    <meta name="keywords"
+        content="admin template, Vuexy admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="PIXINVENT">
     <title>Invoice Print - Vuexy - Bootstrap HTML admin template</title>
     <link rel="apple-touch-icon" href="../../../app-assets/images/ico/apple-icon-120.png">
     <link rel="shortcut icon" type="image/x-icon" href="../../../app-assets/images/ico/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600"
+        rel="stylesheet">
 
     <!-- BEGIN: Vendor CSS-->
     <link rel="stylesheet" type="text/css" href="../../../app-assets/vendors/css/vendors.min.css">
@@ -41,7 +44,8 @@
 
 <!-- BEGIN: Body-->
 
-<body class="vertical-layout vertical-menu-modern blank-page navbar-floating footer-static  " data-open="click" data-menu="vertical-menu-modern" data-col="blank-page">
+<body class="vertical-layout vertical-menu-modern blank-page navbar-floating footer-static  " data-open="click"
+    data-menu="vertical-menu-modern" data-col="blank-page">
     <!-- BEGIN: Content-->
     <div class="app-content content ">
         <div class="content-overlay"></div>
@@ -54,13 +58,16 @@
                     <div class="d-flex justify-content-between flex-md-row flex-column pb-2">
                         <div>
                             <div class="d-flex mb-1">
-                                <svg viewBox="0 0 139 95" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="24">
+                                <svg viewBox="0 0 139 95" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:xlink="http://www.w3.org/1999/xlink" height="24">
                                     <defs>
-                                        <linearGradient id="linearGradient-1" x1="100%" y1="10.5120544%" x2="50%" y2="89.4879456%">
+                                        <linearGradient id="linearGradient-1" x1="100%" y1="10.5120544%" x2="50%"
+                                            y2="89.4879456%">
                                             <stop stop-color="#000000" offset="0%"></stop>
                                             <stop stop-color="#FFFFFF" offset="100%"></stop>
                                         </linearGradient>
-                                        <linearGradient id="linearGradient-2" x1="64.0437835%" y1="46.3276743%" x2="37.373316%" y2="100%">
+                                        <linearGradient id="linearGradient-2" x1="64.0437835%" y1="46.3276743%"
+                                            x2="37.373316%" y2="100%">
                                             <stop stop-color="#EEEEEE" stop-opacity="0" offset="0%"></stop>
                                             <stop stop-color="#FFFFFF" offset="100%"></stop>
                                         </linearGradient>
@@ -68,11 +75,21 @@
                                     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                         <g id="Artboard" transform="translate(-400.000000, -178.000000)">
                                             <g id="Group" transform="translate(400.000000, 178.000000)">
-                                                <path class="text-primary" id="Path" d="M-5.68434189e-14,2.84217094e-14 L39.1816085,2.84217094e-14 L69.3453773,32.2519224 L101.428699,2.84217094e-14 L138.784583,2.84217094e-14 L138.784199,29.8015838 C137.958931,37.3510206 135.784352,42.5567762 132.260463,45.4188507 C128.736573,48.2809251 112.33867,64.5239941 83.0667527,94.1480575 L56.2750821,94.1480575 L6.71554594,44.4188507 C2.46876683,39.9813776 0.345377275,35.1089553 0.345377275,29.8015838 C0.345377275,24.4942122 0.230251516,14.560351 -5.68434189e-14,2.84217094e-14 Z" style="fill: currentColor"></path>
-                                                <path id="Path1" d="M69.3453773,32.2519224 L101.428699,1.42108547e-14 L138.784583,1.42108547e-14 L138.784199,29.8015838 C137.958931,37.3510206 135.784352,42.5567762 132.260463,45.4188507 C128.736573,48.2809251 112.33867,64.5239941 83.0667527,94.1480575 L56.2750821,94.1480575 L32.8435758,70.5039241 L69.3453773,32.2519224 Z" fill="url(#linearGradient-1)" opacity="0.2"></path>
-                                                <polygon id="Path-2" fill="#000000" opacity="0.049999997" points="69.3922914 32.4202615 32.8435758 70.5039241 54.0490008 16.1851325"></polygon>
-                                                <polygon id="Path-21" fill="#000000" opacity="0.099999994" points="69.3922914 32.4202615 32.8435758 70.5039241 58.3683556 20.7402338"></polygon>
-                                                <polygon id="Path-3" fill="url(#linearGradient-2)" opacity="0.099999994" points="101.428699 0 83.0667527 94.1480575 130.378721 47.0740288"></polygon>
+                                                <path class="text-primary" id="Path"
+                                                    d="M-5.68434189e-14,2.84217094e-14 L39.1816085,2.84217094e-14 L69.3453773,32.2519224 L101.428699,2.84217094e-14 L138.784583,2.84217094e-14 L138.784199,29.8015838 C137.958931,37.3510206 135.784352,42.5567762 132.260463,45.4188507 C128.736573,48.2809251 112.33867,64.5239941 83.0667527,94.1480575 L56.2750821,94.1480575 L6.71554594,44.4188507 C2.46876683,39.9813776 0.345377275,35.1089553 0.345377275,29.8015838 C0.345377275,24.4942122 0.230251516,14.560351 -5.68434189e-14,2.84217094e-14 Z"
+                                                    style="fill: currentColor"></path>
+                                                <path id="Path1"
+                                                    d="M69.3453773,32.2519224 L101.428699,1.42108547e-14 L138.784583,1.42108547e-14 L138.784199,29.8015838 C137.958931,37.3510206 135.784352,42.5567762 132.260463,45.4188507 C128.736573,48.2809251 112.33867,64.5239941 83.0667527,94.1480575 L56.2750821,94.1480575 L32.8435758,70.5039241 L69.3453773,32.2519224 Z"
+                                                    fill="url(#linearGradient-1)" opacity="0.2"></path>
+                                                <polygon id="Path-2" fill="#000000" opacity="0.049999997"
+                                                    points="69.3922914 32.4202615 32.8435758 70.5039241 54.0490008 16.1851325">
+                                                </polygon>
+                                                <polygon id="Path-21" fill="#000000" opacity="0.099999994"
+                                                    points="69.3922914 32.4202615 32.8435758 70.5039241 58.3683556 20.7402338">
+                                                </polygon>
+                                                <polygon id="Path-3" fill="url(#linearGradient-2)" opacity="0.099999994"
+                                                    points="101.428699 0 83.0667527 94.1480575 130.378721 47.0740288">
+                                                </polygon>
                                             </g>
                                         </g>
                                     </g>
@@ -87,7 +104,9 @@
                             <h4 class="font-weight-bold text-right mb-1">INVOICE #3492</h4>
                             <div class="invoice-date-wrapper mb-50">
                                 <span class="invoice-date-title">Date Issued:</span>
-                                <span class="font-weight-bold"> <%= new Date().getDate() %>/<%= new Date().getMonth() %>/<%= new Date().getFullYear() %>  </span>
+                                <span class="font-weight-bold">
+                                    <%= new Date().getDate() %>/<%= new Date().getMonth() %>/<%= new Date().getFullYear() %>
+                                </span>
                             </div>
                             <!-- <div class="invoice-date-wrapper">
                                 <span class="invoice-date-title">Due Date:</span>
@@ -185,7 +204,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <% for(let ammenity of booking.ammenities){ %> 
+                                <% for(let ammenity of booking.ammenities){ %>
                                 <tr class="border-bottom">
                                     <td class="py-1 pl-4">
                                         <p class="font-weight-semibold mb-25"><%= ammenity.name  %> </p>
@@ -201,7 +220,7 @@
                                         <strong><%= ammenity.price_per_unit  %>.00</strong>
                                     </td>
                                 </tr>
-                                <% } %> 
+                                <% } %>
                             </tbody>
                         </table>
                     </div>
@@ -209,14 +228,17 @@
                     <div class="row invoice-sales-total-wrapper mt-3">
                         <div class="col-md-6 order-md-1 order-2 mt-md-0 mt-3">
                             <p class="card-text mb-0">
-                                <span class="font-weight-bold">Salesperson:</span> <span class="ml-75"><%= currentUser.fname  %> <%= currentUser.lname  %>  </span>
+                                <span class="font-weight-bold">Salesperson:</span> <span
+                                    class="ml-75"><%= currentUser.fname  %> <%= currentUser.lname  %> </span>
                             </p>
                         </div>
                         <div class="col-md-6 d-flex justify-content-end order-md-2 order-1">
                             <div class="invoice-total-wrapper">
                                 <div class="invoice-total-item">
                                     <p class="invoice-total-title">Number Of Days:</p>
-                                    <p class="invoice-total-amount"><%=  Math.ceil((new Date(booking.checkout)-new Date(booking.check_in))/(3600000*24))   %></p>
+                                    <p class="invoice-total-amount">
+                                        <%=  Math.ceil((new Date(booking.checkout)-new Date(booking.check_in))/(3600000*24))   %>
+                                    </p>
                                 </div>
                                 <!-- <div class="invoice-total-item">
                                     <p class="invoice-total-title">Discount:</p>
@@ -240,7 +262,8 @@
                     <div class="row">
                         <div class="col-12">
                             <span class="font-weight-bold">Note:</span>
-                            <span>It was a pleasure you joined our hotel. We hope you will keep us in mind for future travels. Thank You!</span>
+                            <span>It was a pleasure you joined our hotel. We hope you will keep us in mind for future
+                                travels. Thank You!</span>
                         </div>
                     </div>
                 </div>
@@ -268,7 +291,7 @@
     <!-- END: Page JS-->
 
     <script>
-        $(window).on('load', function() {
+        $(window).on('load', function () {
             if (feather) {
                 feather.replace({
                     width: 14,
