--- a/views/receptionist/customer/create.ejs
+++ b/views/receptionist/customer/create.ejs
@@ -39,81 +39,81 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
-                                                <input type="text" class="form-control" id="fname"
-                                                    required name="customer[fname]" placeholder="First Name" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="text" class="form-control" id="fname" required
+                                                    name="customer[fname]" placeholder="First Name" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="lname">Last Name</label>
-                                                <input type="text" class="form-control" id="lname"
-                                                    required name="customer[lname]" placeholder="Last Name" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="text" class="form-control" id="lname" required
+                                                    name="customer[lname]" placeholder="Last Name" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
-                                                <input type="text" class="form-control" id="email"
-                                                    required name="customer[email]" placeholder="Enter email" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="text" class="form-control" id="email" required
+                                                    name="customer[email]" placeholder="Enter email" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="mobile">Mobile</label>
-                                                <input type="text" class="form-control" id="mobile"
-                                                    required name="customer[mobile]" placeholder="Enter Mobile" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="text" class="form-control" id="mobile" required
+                                                    name="customer[mobile]" placeholder="Enter Mobile" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="nic">NIC</label>
-                                                <input type="text" class="form-control" id="nic" required name="customer[nic]"
-                                                    placeholder="NIC" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="text" class="form-control" id="nic" required
+                                                    name="customer[nic]" placeholder="NIC" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="dob">DOB</label>
-                                                <input type="date" class="form-control" id="dob" required name="customer[dob]"
-                                                    placeholder="dob" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="date" class="form-control" id="dob" required
+                                                    name="customer[dob]" placeholder="dob" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="address">Address</label>
-                                                <input type="text" class="form-control" id="address"
-                                                    required name="customer[address]" placeholder="Address" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="text" class="form-control" id="address" required
+                                                    name="customer[address]" placeholder="Address" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="city">City</label>
-                                                <input type="text" class="form-control" id="city" required name="customer[city]"
-                                                    placeholder="City" />
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                <input type="text" class="form-control" id="city" required
+                                                    name="customer[city]" placeholder="City" />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -132,7 +132,8 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="country">Country</label>
-                                                <select class="form-control" id="country" required name="customer[country]">
+                                                <select class="form-control" id="country" required
+                                                    name="customer[country]">
                                                     <% for(let country of data['countries']){ %>
                                                     <option value="<%= country._id %>"><%= country.name %> </option>
                                                     <%  } %>
