--- a/views/receptionist/customer/edit.ejs
+++ b/views/receptionist/customer/edit.ejs
@@ -34,17 +34,18 @@
                                 <h4 class="card-title">Create New Customers</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/receptionist/customer/<%= customer._id %>?_method=PUT" method="post" novalidate class="validated-form">
+                                <form action="/receptionist/customer/<%= customer._id %>?_method=PUT" method="post"
+                                    novalidate class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
                                                 <input type="text" class="form-control" id="fname"
                                                     value="<%=customer.fname%>" name="customer[fname]"
-                                                    placeholder="First Name" required/>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    placeholder="First Name" required />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -52,10 +53,10 @@
                                                 <label for="lname">Last Name</label>
                                                 <input type="text" class="form-control" id="lname"
                                                     value="<%=customer.lname%>" name="customer[lname]"
-                                                    placeholder="Last Name" required/>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    placeholder="Last Name" required />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -63,10 +64,10 @@
                                                 <label for="email">Email</label>
                                                 <input type="text" class="form-control" id="email"
                                                     value="<%=customer.email%>" name="customer[email]"
-                                                    placeholder="Enter email" required/>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    placeholder="Enter email" required />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -74,30 +75,32 @@
                                                 <label for="mobile">Mobile</label>
                                                 <input type="text" class="form-control" id="mobile"
                                                     value="<%=customer.mobile%>" name="customer[mobile]"
-                                                    placeholder="Enter Mobile" required/>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    placeholder="Enter Mobile" required />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="nic">NIC</label>
                                                 <input type="text" class="form-control" id="nic"
-                                                    value="<%=customer.nic%>" name="customer[nic]" placeholder="NIC" required/>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.nic%>" name="customer[nic]" placeholder="NIC"
+                                                    required />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="dob">DOB</label>
                                                 <input type="date" class="form-control" id="dob"
-                                                    value="<%=customer.dob%>" name="customer[dob]" placeholder="dob" required/>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.dob%>" name="customer[dob]" placeholder="dob"
+                                                    required />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -105,30 +108,32 @@
                                                 <label for="address">Address</label>
                                                 <input type="text" class="form-control" id="address"
                                                     value="<%=customer.address%>" name="customer[address]"
-                                                    placeholder="Address" required/>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    placeholder="Address" required />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="city">City</label>
                                                 <input type="text" class="form-control" id="city"
-                                                    value="<%=customer.city%>" name="customer[city]"
-                                                    placeholder="City" required/>
-                                                    <div class="invalid-feedback">
-                                                        Check Again!
-                                                    </div>
+                                                    value="<%=customer.city%>" name="customer[city]" placeholder="City"
+                                                    required />
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="state">State</label>
                                                 <select class="form-control" id="state" required name="customer[state]">
-                                                <% for(let state of data['states']){ %>
-                                                    <option value="<%= state._id %>" <%= (customer.state === state._id)?'selected':'' %> ><%= state.name %> </option>
-                                                <%  } %>
+                                                    <% for(let state of data['states']){ %>
+                                                    <option value="<%= state._id %>"
+                                                        <%= (customer.state === state._id)?'selected':'' %>>
+                                                        <%= state.name %> </option>
+                                                    <%  } %>
                                                 </select>
                                                 <div class="invalid-feedback">
                                                     Check Again!
@@ -138,10 +143,13 @@
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="country">Country</label>
-                                                <select class="form-control" id="state" required name="customer[country]">
-                                                <% for(let country of data['countries']){ %>
-                                                    <option value="<%= country._id %>"  <%= (customer.country === country._id)?'selected':'' %> ><%= country.name %> </option>
-                                                <%  } %>
+                                                <select class="form-control" id="state" required
+                                                    name="customer[country]">
+                                                    <% for(let country of data['countries']){ %>
+                                                    <option value="<%= country._id %>"
+                                                        <%= (customer.country === country._id)?'selected':'' %>>
+                                                        <%= country.name %> </option>
+                                                    <%  } %>
                                                 </select>
                                                 <div class="invalid-feedback">
                                                     Check Again!
